Added a link to the markers

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 PROTOTHON!
 
 Deployed to: http://protoproject.herokuapp.com/
+Access the ARCode markers from http://protoproject.herokuapp.com/marker.html
