--- a/README
+++ b/README
@@ -2,3 +2,9 @@ PROTOTHON!
 
 Deployed to: http://protoproject.herokuapp.com/
 Access the ARCode markers from http://protoproject.herokuapp.com/marker.html
+
+This project uses WebRTC API's to enable control of Audio filters using ARCodes. Hit the start button and then load up
+the markers using your mobile device. Based on the rotation angle of the ARCode, the audio filter settings will be adjusted.
+
+Current work in progress includes enabling peer-to-peer video to allow for multiple people to control each others 
+audio.
