added in a screenshot of this thing in action

--- a/README
+++ b/README
@@ -8,3 +8,7 @@ the markers using your mobile device. Based on the rotation angle of the ARCode,
 
 Current work in progress includes enabling peer-to-peer video to allow for multiple people to control each others 
 audio.
+
+Screenshot:
+![Screenshot](screenshot.png)
+
